[package]
name = "eeprom25aa02e48"
version = "0.2.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/eeprom25aa02e48-rs"
license = "MIT"
description = "Platform-agnostic Rust driver for the 25AA02E48 EEPROM."
readme = "README.md"
keywords = ["eeprom", "spi", "driver", "embedded-hal-driver", "microchip"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/eeprom25aa02e48-rs"

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
embedded-hal-mock = "0.8"
ftdi-embedded-hal = { version = "0.13", features = ["libftd2xx"] }

[badges]
maintenance = { status = "as-is" }
