[package]
name = "eeprom25aa02e48"
version = "1.0.1"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2024"
repository = "https://github.com/newAM/eeprom25aa02e48-rs"
license = "MIT"
description = "Platform-agnostic Rust driver for the 25AA02E48 EEPROM."
readme = "README.md"
keywords = ["eeprom", "spi", "driver", "embedded-hal-driver", "microchip"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "1"

[dev-dependencies]
embedded-hal-mock = "0.11"
ftdi-embedded-hal = { version = "0.22", features = ["libftd2xx"] }
